--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
         <title>Otawanta</title>
           <!-- Include the EmailJS CDN -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-        <link rel="stylesheet" href="styles2.css">
+        <link rel="stylesheet" href="Styles/styles2.css">
     </head>
 <body>
 
@@ -126,7 +126,7 @@
         &copy; 2024 Otawanta
 </footer>
 
-    <script src="script.js"></script>
+    <script src="Script/script.js"></script>
 
 </body>
 </html>
